--- a/Santos_HannahJasmin_Laboratory_3.ipynb
+++ b/Santos_HannahJasmin_Laboratory_3.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Abella, Tom Leonard N.\n",
+        "Santos, Hannah Jasmin C.\n",
         "BET - CpET 4B (NS)"
       ],
       "metadata": {
